# best-fit-jobs

./: Cargo.toml
src/: main.rs
src/api/: application_api.rs  jobs_api.rs  mod.rs  user_api.rs
src/config/: auth.rs  cloudinary.rs  mod.rs  pdf_extractor.rs  rand.rs
src/db/: mod.rs  mongoDb.rs  mongo_db.rs
src/middleware/: jwt_middleware.rs
src/models/: application_model.rs  job_model.rs  mod.rs  user_model.rs
src/repository/: application_repo.rs  job_repo.rs  mod.rs  user_repo.rs
