[package]
name = "best-fit-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1"
actix-web = "4.9.0"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
mongodb = {version = "3.1.0", features = ["sync"]}
log = "0.4"
colog = "1.3.0"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.132"

